sparseir-capi/include/sparseir_capi.h

/**
 * Opaque funcs type for C API (compatible with libsparseir)
 *
 * Wraps piecewise Legendre polynomial representations:
 * - PiecewiseLegendrePolyVector for u and v
 * - PiecewiseLegendreFTVector for uhat
 *
 * Note: Named `spir_funcs` to match libsparseir C++ API exactly.
 */
typedef struct spir_funcs {
    struct FuncsType inner;
    double beta;
} spir_funcs;
/**
 * Error codes for C API (compatible with libsparseir)
 */
typedef int StatusCode;
/**
 * Opaque basis type for C API (compatible with libsparseir)
 *
 * Represents a finite temperature basis (IR or DLR).
 *
 * Note: Named `spir_basis` to match libsparseir C++ API exactly.
 */
typedef struct spir_basis {
    struct BasisType inner;
} spir_basis;
/**
 * Opaque kernel type for C API (compatible with libsparseir)
 *
 * This is a tagged union that can hold either LogisticKernel or RegularizedBoseKernel.
 * The actual type is determined by which constructor was used.
 *
 * Note: Named `spir_kernel` to match libsparseir C++ API exactly.
 */
typedef struct spir_kernel {
    struct KernelType inner;
} spir_kernel;
/**
 * Opaque SVE result type for C API (compatible with libsparseir)
 *
 * Contains singular values and singular functions from SVE computation.
 *
 * Note: Named `spir_sve_result` to match libsparseir C++ API exactly.
 */
typedef struct spir_sve_result {
    struct Arc_SVEResult inner;
} spir_sve_result;
#define SPIR_COMPUTATION_SUCCESS 0
#define SPIR_INVALID_ARGUMENT -6
/**
 * Get singular values (alias for spir_basis_get_svals for libsparseir compatibility)
 */
StatusCode spir_basis_get_singular_values(const struct spir_basis *b, double *svals);
/**
 * Gets the basis functions in imaginary time (τ) domain
 *
 * # Arguments
 * * `b` - Pointer to the finite temperature basis object
 * * `status` - Pointer to store the status code
 *
 * # Returns
 * Pointer to the basis functions object (`spir_funcs`), or NULL if creation fails
 *
 * # Safety
 * The caller must ensure that `b` is a valid pointer, and must call
 * `spir_funcs_release()` on the returned pointer when done.
 */
struct spir_funcs *spir_basis_get_u(const struct spir_basis *b, StatusCode *status);
/**
 * Gets the basis functions in Matsubara frequency domain
 *
 * # Arguments
 * * `b` - Pointer to the finite temperature basis object
 * * `status` - Pointer to store the status code
 *
 * # Returns
 * Pointer to the basis functions object (`spir_funcs`), or NULL if creation fails
 *
 * # Safety
 * The caller must ensure that `b` is a valid pointer, and must call
 * `spir_funcs_release()` on the returned pointer when done.
 */
struct spir_funcs *spir_basis_get_uhat(const struct spir_basis *b, StatusCode *status);
/**
 * Create a finite temperature basis (libsparseir compatible)
 *
 * # Arguments
 * * `statistics` - 0 for Bosonic, 1 for Fermionic
 * * `beta` - Inverse temperature (must be > 0)
 * * `omega_max` - Frequency cutoff (must be > 0)
 * * `epsilon` - Accuracy target (must be > 0)
 * * `k` - Kernel object (can be NULL if sve is provided)
 * * `sve` - Pre-computed SVE result (can be NULL, will compute if needed)
 * * `max_size` - Maximum basis size (-1 for no limit)
 * * `status` - Pointer to store status code
 *
 * # Returns
 * * Pointer to basis object, or NULL on failure
 *
 * # Safety
 * The caller must ensure `status` is a valid pointer.
 */
struct spir_basis *spir_basis_new(int statistics,
                                  double beta,
                                  double omega_max,
                                  double epsilon,
                                  const struct spir_kernel *k,
                                  const struct spir_sve_result *sve,
                                  int max_size,
                                  StatusCode *status);
/**
 * Release a basis object
 *
 * # Arguments
 * * `b` - Basis to release (can be NULL)
 *
 * # Safety
 * After calling this function, the basis pointer is invalid and must not be used.
 */
void spir_basis_release(struct spir_basis *b);
/**
 * Batch evaluate functions at multiple points (continuous functions only)
 *
 * # Arguments
 * * `funcs` - Pointer to the funcs object
 * * `order` - Memory layout: 0 for row-major, 1 for column-major
 * * `num_points` - Number of evaluation points
 * * `xs` - Array of points to evaluate at
 * * `out` - Pre-allocated array to store results
 *
 * # Returns
 * Status code (SPIR_SUCCESS on success, SPIR_NOT_SUPPORTED if not continuous)
 *
 * # Safety
 * - `xs` must have size >= `num_points`
 * - `out` must have size >= `num_points * spir_funcs_get_size(funcs)`
 * - Layout: row-major = out[point][func], column-major = out[func][point]
 */
StatusCode spir_funcs_batch_eval(const struct spir_funcs *funcs,
                                 int order,
                                 int num_points,
                                 const double *xs,
                                 double *out);
/**
 * Batch evaluate functions at multiple Matsubara frequencies
 *
 * # Arguments
 * * `funcs` - Pointer to the funcs object
 * * `order` - Memory layout: 0 for row-major, 1 for column-major
 * * `num_freqs` - Number of Matsubara frequencies
 * * `ns` - Array of Matsubara frequency indices
 * * `out` - Pre-allocated array to store complex results
 *
 * # Returns
 * Status code (SPIR_SUCCESS on success, SPIR_NOT_SUPPORTED if not Matsubara type)
 *
 * # Safety
 * - `ns` must have size >= `num_freqs`
 * - `out` must have size >= `num_freqs * spir_funcs_get_size(funcs)`
 * - Complex numbers are laid out as [real, imag] pairs
 * - Layout: row-major = out[freq][func], column-major = out[func][freq]
 */
StatusCode spir_funcs_batch_eval_matsu(const struct spir_funcs *funcs,
                                       int order,
                                       int num_freqs,
                                       const int64_t *ns,
                                       Complex64 *out);
/**
 * Clone a funcs object (creates a new reference with shared data)
 *
 * # Arguments
 * * `src` - Pointer to the source funcs object
 *
 * # Returns
 * A new pointer to a funcs object, or null if input is null
 *
 * # Safety
 * The caller must ensure that `src` is a valid pointer.
 * The returned pointer must be freed with `spir_funcs_release()`.
 */
struct spir_funcs *spir_funcs_clone(const struct spir_funcs *src);
/**
 * Evaluate functions at a single point (continuous functions only)
 *
 * # Arguments
 * * `funcs` - Pointer to the funcs object
 * * `x` - Point to evaluate at (tau coordinate in [-1, 1])
 * * `out` - Pre-allocated array to store function values
 *
 * # Returns
 * Status code (SPIR_SUCCESS on success, SPIR_NOT_SUPPORTED if not continuous)
 *
 * # Safety
 * The caller must ensure that `out` has size >= `spir_funcs_get_size(funcs)`
 */
StatusCode spir_funcs_eval(const struct spir_funcs *funcs, double x, double *out);
/**
 * Evaluate functions at a single Matsubara frequency
 *
 * # Arguments
 * * `funcs` - Pointer to the funcs object
 * * `n` - Matsubara frequency index
 * * `out` - Pre-allocated array to store complex function values
 *
 * # Returns
 * Status code (SPIR_SUCCESS on success, SPIR_NOT_SUPPORTED if not Matsubara type)
 *
 * # Safety
 * The caller must ensure that `out` has size >= `spir_funcs_get_size(funcs)`
 * Complex numbers are laid out as [real, imag] pairs
 */
StatusCode spir_funcs_eval_matsu(const struct spir_funcs *funcs, int64_t n, Complex64 *out);
/**
 * Gets the number of basis functions
 *
 * # Arguments
 * * `funcs` - Pointer to the funcs object
 * * `size` - Pointer to store the number of functions
 *
 * # Returns
 * Status code (SPIR_SUCCESS on success)
 */
StatusCode spir_funcs_get_size(const struct spir_funcs *funcs, int *size);
/**
 * Extract a subset of functions by indices
 *
 * # Arguments
 * * `funcs` - Pointer to the source funcs object
 * * `nslice` - Number of functions to select (length of indices array)
 * * `indices` - Array of indices specifying which functions to include
 * * `status` - Pointer to store the status code
 *
 * # Returns
 * Pointer to a new funcs object containing only the selected functions, or null on error
 *
 * # Safety
 * The caller must ensure that `funcs` and `indices` are valid pointers.
 * The returned pointer must be freed with `spir_funcs_release()`.
 */
struct spir_funcs *spir_funcs_get_slice(const struct spir_funcs *funcs,
                                        int32_t nslice,
                                        const int32_t *indices,
                                        StatusCode *status);
/**
 * Check if a funcs object is assigned (non-null and valid)
 *
 * # Arguments
 * * `obj` - Pointer to the funcs object
 *
 * # Returns
 * 1 if the object is valid, 0 otherwise
 */
int32_t spir_funcs_is_assigned(const struct spir_funcs *obj);
/**
 * Releases a funcs object
 *
 * # Arguments
 * * `funcs` - Pointer to the funcs object to release
 *
 * # Safety
 * The caller must ensure that `funcs` is a valid pointer returned from a previous
 * `spir_basis_get_u/v/uhat()` call, and that it is not used after this function returns.
 */
void spir_funcs_release(struct spir_funcs *funcs);